--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,8 @@ spring:
     hibernate:
       ddl-auto: create
     properties:
-      format_sql: true
+      hibernate:
+        format_sql: true
 
   h2:
     console:
