--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,8 @@ spring:
       ddl-auto: create
     properties:
       hibernate:
-        format_sql: true
+      format_sql: true
+    open-in-view: false
 
   h2:
     console:
